[tool.poetry]
name = "lidar-pbl"
version = "0.1.0"
description = ""
authors = ["Juan Diego <jdidelarc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.0.0"
typer = "^0.4.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
pendulum = "^2.1.2"
matplotlib = "^3.5.1"
black = {extras = ["jupyter"], version = "^22.3.0"}
toml = "^0.10.2"
PyWavelets = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
ipykernel = "^6.9.2"
# pycairo = "^1.21.0"
# PyGObject = "^3.42.0"

[tool.poetry.scripts]
lidar-pbl = "lidar_pbl.cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
