[tool.poetry]
name = "lidar-pbl"
version = "0.0.2"
description = "Package in development that contains functions and command line utitlities to handle lidar data and PBL height calculations"
authors = ["Juan Diego <jdidelarc@gmail.com>"]
repository = "https://github.com/jdlar1/lidar-pbl"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.0.0"
typer = "^0.4.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
pendulum = "^2.1.2"
matplotlib = "^3.5.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
ipykernel = "^6.9.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
lidar-pbl = "lidar_pbl.cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
